--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,13 +9,25 @@
         tools:showIn="@layout/app_bar_main"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+    <Spinner
+            android:layout_width="346dp"
+            android:layout_height="27dp" tools:layout_editor_absoluteY="16dp"
+            android:id="@+id/filter"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/dynamic_anchor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="345dp"
+            android:layout_height="295dp"
+            tools:layout_editor_absoluteY="137dp" tools:layout_editor_absoluteX="20dp"/>
+
 
 </android.support.constraint.ConstraintLayout>
