--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,39 +10,36 @@
         tools:context=".MainActivity">
 
 
-
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:background="@color/colorAccent"
-                      android:orientation="horizontal"
-                      android:paddingEnd="@dimen/activity_vertical_margin"
-                      app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-                      app:layout_constraintEnd_toEndOf="parent">
-            <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="27dp" tools:layout_editor_absoluteY="16dp"
-                    android:id="@+id/filter"/>
-            <Button
-                    android:text="@string/filter_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    tools:layout_editor_absoluteX="276dp" android:id="@+id/button"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="vertical"
-                android:id="@+id/dynamic_anchor"
-                android:layout_width="match_parent"
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:background="@color/colorAccent"
+                  android:orientation="horizontal"
+                  android:paddingEnd="@dimen/activity_vertical_margin"
+                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                  app:layout_constraintEnd_toEndOf="parent" android:id="@+id/filter_holder">
+        <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="27dp" tools:layout_editor_absoluteY="16dp"
+                android:id="@+id/filter"/>
+        <Button
+                android:text="@string/filter_text"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"/>
-
-
-
-
-
-
-
-
+                android:layout_gravity="end"
+                android:id="@+id/filter_button" android:elevation="5dp"/>
+        <Button
+            android:text="@string/clear_filter_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/clear_filter_button" android:elevation="5dp"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/dynamic_anchor"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/filter_holder"/>
 
     <ListView
             android:layout_width="match_parent"
